# traject_recorder

./: CMakeLists.txt  README.md  package.xml  trajectory_recorder_auto.cpp
config/: traject_recorder_config.yaml
include/map_manager/: map_manager.hpp  traject_recorder_auto.hpp  trajectory_recorder_auto.hpp
include/traject_recorder/: traject_recorder_auto.hpp
launch/: traject_recorder_launch.xml
src/: traject_recorder_auto.cpp  traject_recorder_manual.cpp  traject_recorder_node.cpp
