<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traject_recorder</name>
  <version>0.0.0</version>
  <description>traject_recorder</description>
  <maintainer email="keeeesukee@gmail.com">suke</maintainer>
   <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
